BACS-18: docs: openapi errors updated
